# jaskon

./: .gitignore  README.md  pyproject.toml
assets/: README.md
models/: README.md
output/: README.md
scripts/: 99-frameo.rules  jackson-wakeup.env.example  jackson-wakeup.service
src/jackson_wakeup/: __init__.py  cli.py  config.py  frameo_sync.py  location.py  openai_client.py  pipeline.py  stt.py  vosk_setup.py  weather.py  web_search.py
src/jackson_wakeup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
